
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline void eat_at (const char *key, int key_len, char **new_key, int *new_len) {
  *new_key = (char *)key;
  *new_len = key_len;

  if ((*key >= '0' && *key <= '9') || (*key == '-' && key[1] >= '0' && key[1] <= '9')) {
    key++;
    while (*key >= '0' && *key <= '9') {
      key++;
    }
    if (*key++ == '@') {
      *new_len = key + key_len - *new_key;
      *new_key = (char *)key;
    }
  }
}
